fix: header width causing scrollbar

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@
 .header {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   min-height: 480px;
   background: $darkestGrey url('../images/header-coffee.jpg') no-repeat;
   background-position: center top;
